[package]
name = "jlog"
description = "JSON logs formatter"
version = "0.1.5"
authors = ["Denis Krivak <tetafro@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/tetafro/jlog"
repository = "https://github.com/tetafro/jlog"

[dependencies]
chrono = "0.4"
colored = "1.9"
serde_json = "1.0.53"
signal-hook = "0.1.15"
